Web of Trust : Trust list insertion is now working
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/apps/Thaw@17842 67a373e5-eb02-0410-a15c-ee090a768436